--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="robots" content="noindex"> 
+    <link rel="stylesheet" href="css/generel.css">
+    <link rel="stylesheet" href="css/">
+    <link rel="apple-touch-icon" sizes="180x180" href="flavicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="flavicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="flavicon/favicon-16x16.png">
+    <link rel="manifest" href="flavicon/site.webmanifest">
+    <title>MMD 1.semester eksamen</title>
 </head>
+
 <body>
-    
+
+    <header>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+    <script src="java_script/java.js"></script>
 </body>
+
 </html>
