--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex"> 
     <link rel="stylesheet" href="css/generel.css">
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/forside.css">
     <link rel="apple-touch-icon" sizes="180x180" href="flavicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="flavicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="flavicon/favicon-16x16.png">
@@ -17,12 +17,91 @@
 <body>
 
     <header>
+        <div class="header">
+            <a href="tema_2.html"><button class="hbutton"><p>Tema 2</p></button></a>
+            <div class="dropdown-cont">
+                <a href="tema_2.html"><p>Om tema 2</p></a>
+                <a href="02.01.02.html"><p>Studiestartsprøven</p></a>
+                <a href="02.02.01.html"><p>Emnesite</p></a>
+            </div>
+        </div>
+        <div class="header">
+            <a href="tema_3.html"><button class="hbutton"><p>Tema 3</p></button></a>
+            <div class="dropdown-cont">
+                <a href="tema_3.html"><p>Om tema 3</p></a>
+                <a href="03.04.01.html"><p>Pitch</p></a>
+            </div>
+        </div>
+        <div class="header">
+            <a href="tema_4.html"><button class="hbutton"><p>Tema 4</p></button></a>
+            <div class="dropdown-cont">
+                <a href="tema_4.html"><p>Om tema 4</p></a>
+                <a href="04.04.01.html"><p>Temaopgave</p></a>
+            </div>
+        </div>
+        <div class="header">
+            <a href="tema_5.html"><button class="hbutton"><p>Tema 5</p></button></a>
+            <div class="dropdown-cont">
+                <a href="tema_5.html"><p>Om tema 5</p></a>
+                <a href="05.02.01.html"><p>Virksomhedssite</p></a>
+            </div>
+        </div>
+        <div class="header">
+            <a href="om_mig.html"><button class="hbutton"> <p>Om mig</p></button></a>
+        </div>
+        
+        <div class="header-burger">
+            <button class="hbutton">Menu</button>
+                <nav >
+                    <ul class="dropdown-cont">
+                        <li><a href="tema_2.html"><p>Tema 2</p></a></li>
+                        <li class="indryk"><a href="02.01.02.html"><p>Studiestartsprøven</p></a></li>
+                        <li class="indryk"><a href="02.02.01.html"><p>Emnesite</p></a></li>
+                        <li><a href="tema_3.html"><p>Tema 3</p></a></li>
+                        <li class="indryk"><a href="04.04.01.html"><p>Temaopgave</p></a></li>
+                        <li><a href="tema_4.html"><p>Tema 4</p></a></li>
+                        <li class="indryk"><a href="04.04.01.html"><p>Temaopgave</p></a></li>
+                        <li><a href="tema_5.html"><p>Tema 5</p></a></li>
+                        <li class="indryk"><a href="05.02.01.html"><p>Virksomhedssite</p></a></li>
+                        <li><a href="om_mig.html"><p>Om mig</p></a></li>
+                    </ul>
+                </nav>
+        </div>
     </header>
 
-    <main></main>
+    <main>
 
-    <footer></footer>
-    <script src="java_script/java.js"></script>
+        <div id="screen"> 
+
+            <div id="background"></div>
+
+            <div id="blad_nv_container">
+                <a href="tema_2.html"><div id="blad_nv_sprite"></div></a>
+            </div>
+
+            <div id="blad_nh_container">
+                <a href="tema_3.html"><div id="blad_nh_sprite"></div></a>
+            </div>
+
+            <div id="blad_mv_container">
+                <a href="tema_4.html"><div id="blad_mv_sprite"></div></a>
+            </div>
+
+            <div id="blad_mh_container">
+                <a href="tema_5.html"><div id="blad_mh_sprite"></div></a>
+            </div>
+
+            <div id="blad_t_container">
+                <a href="om_mig.html"><div id="blad_t_sprite"></div></a>
+            </div>
+
+        </div>
+    
+    </main>
+
+    <footer>
+        <div class="footer"><p>Krestine Haugaard MMD eksamen</p></div>
+    </footer>
 </body>
 
 </html>
