--- a/om_mig.html
+++ b/om_mig.html
@@ -17,66 +17,29 @@
 <body>
    
     <header>
-        <div class="header">
-            <a href="tema_2.html"><button class="hbutton"><p>Tema 2</p></button></a>
-            <div class="dropdown-cont">
-                <a href="tema_2.html"><p>Om tema 2</p></a>
-                <a href="02.01.02.html"><p>Studiestartsprøven</p></a>
-                <a href="02.02.01.html"><p>Emnesite</p></a>
-            </div>
-        </div>
-        <div class="header">
-            <a href="tema_3.html"><button class="hbutton"><p>Tema 3</p></button></a>
-            <div class="dropdown-cont">
-                <a href="tema_3.html"><p>Om tema 3</p></a>
-                <a href="03.04.01.html"><p>Pitch</p></a>
-            </div>
-        </div>
-        <div class="header">
-            <a href="tema_4.html"><button class="hbutton"><p>Tema 4</p></button></a>
-            <div class="dropdown-cont">
-                <a href="tema_4.html"><p>Om tema 4</p></a>
-                <a href="04.04.01.html"><p>Temaopgave</p></a>
-            </div>
-        </div>
-        <div class="header">
-            <a href="tema_5.html"><button class="hbutton"><p>Tema 5</p></button></a>
-            <div class="dropdown-cont">
-                <a href="tema_5.html"><p>Om tema 5</p></a>
-                <a href="05.02.01.html"><p>Virksomhedssite</p></a>
-            </div>
-        </div>
-        <div class="header">
-            <a href="om_mig.html"><button class="hbutton"> <p>Om mig</p></button></a>
-        </div>
         
-        <div class="header-burger">
-            <button class="hbutton"><p>Menu</p></button>
-                <nav >
-                    <ul class="dropdown-cont">
-                        <li><a href="tema_2.html"><p>Tema 2</p></a></li>
-                        <div class="indryk">
-                            <li><a href="02.01.02.html"><p>Studiestartsprøven</p></a></li>
-                            <li><a href="02.02.01.html"><p>Emnesite</p></a></li>
-                        </div>
-                        <li><a href="tema_3.html"><p>Tema 3</p></a></li>
-                        <div class="indryk">
-                            <li><a href="04.04.01.html"><p>Temaopgave</p></a></li>
-                        </div>
-                        <li><a href="tema_4.html"><p>Tema 4</p></a></li>
-                        <div class="indryk">
-                            <li><a href="04.04.01.html"><p>Temaopgave</p></a></li>
-                        </div>
-                        <li><a href="tema_5.html"><p>Tema 5</p></a></li>
-                        <div class="indryk">
-                            <li><a href="05.02.01.html"><p>Virksomhedssite</p></a></li>
-                        </div>
-                        <li><a href="om_mig.html"><p>Om mig</p></a></li>
-                    </ul>
-                </nav>
-        </div>
+        <nav class="navbar">
+            <ul class="navmenu">
+                <li class="navindhold"><a href="index.html" class="navlink">Forside</a></li>
+                <li class="navindhold"><a href="tema_2.html" class="navlink">Tema 2</a></li>
+                <li class="navindhold"><a href="tema_3.html" class="navlink">Tema 3</a></li>
+                <li class="navindhold"><a href="tema_4.html" class="navlink">Tema 4</a></li>
+                <li class="navindhold"><a href="tema_5.html" class="navlink">Tema 5</a></li>
+                <li class="navindhold"><a href="om_mig.html" class="navlink">Om mig</a></li>
+            </ul>
+            <div class="burgermenu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+
     </header>
-    
+
+    <footer>
+        <div class="footer"><p>Krestine Haugaard MMD eksamen</p></div>
+    </footer>
+    <script src="java_js/jave.js"></script>
 </body>
 
 </html>
