--- a/tema_2.html
+++ b/tema_2.html
@@ -36,6 +36,10 @@
 
     </header>
 
+    <main>
+        
+    </main>
+
     <footer>
         <div class="footer"><p>Krestine Haugaard MMD eksamen</p></div>
     </footer>
