--- a/om_mig.html
+++ b/om_mig.html
@@ -36,6 +36,54 @@
 
     </header>
 
+    <main>
+
+        <h1>Om mig</h1>
+        <div class="frame">
+            <div class="grid_1">
+                <div>
+                    <img src="img/om_mig/mig.png" alt="billede af webside ejer">
+                </div>
+                <div>
+                    <h2 class="indryk">Krestine Haugaard</h2>
+                    <p>Puha, at skrive om sig selv er godt nok svært, men jeg er 24 år, jeg bor Nordvest og jeg har endelig fundet den uddannelse der føles som den rette hylde.</p> 
+                    <p>Som det kan ses nedenunder, har jeg været lidt rundt både i forhold til uddannelser og arbejde.</p> 
+                    <p>Jeg kan rigtig godt lide at være kreativ, jeg bruger blandt andet min fritid på at male minies (warhammer) tegne, skrive historier og så elsker jeg at bage og spille computer.</p> 
+                    <p>Jeg tilbringer gerne en fredag aften hjemme ved mit skrivebord, hvor jeg kan fordybe mig i min egen verden.</p>
+                    <p>Alt i alt føler jeg, at jeg er rigtig god til at indleve mig i mine projekter. Jeg går gerne i detaljer, hvis arbejdet virkelig fasinere mig, og derfor føler jeg at jeg er landet på den rigtige hylde i forhold til uddanelse</p>
+                    <p>På mit første semester har jeg opdaget, hvor glad jeg er for at lære kode, noget jeg aldrig havde troet, da jeg søgte optagelse på studiet fordi jeg så mig selv i den kreative design del</p>
+                    <p>Jeg generelt bare rigtig glad for den måde vi laver skolearbejde, det føles ikke på samme måde tungt, som andre studier, og så kan jeg rigtig godt lide at alle temaer har haft en form for kreativt produkt, der afspejler det vi har lært.</p>
+                </div>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div>
+                    <h3>Uddannelse</h3>
+                        <ul>
+                            <li>Multimediedesigner Kea (2023-nu)</li>
+                            <li>Psykomotorisk terapeut Københavns Professionshøjskole (2022)</li>
+                            <li>Fysioterapeut Københavns Professionshøjskole (2021-2022)</li>
+                            <li>STX Høng Gymnasium sproglig linje (2016-2019)</li>
+                            <li>Konditor ZBC Ringsted grundforløb 1-2 (2015-2016)</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>Erhvervserfaring</h3>
+                        <ul>
+                            <li>Rengøring for spil firmaet Invisible Walls (2022-nu)</li>
+                            <li>Jule lagermedarbejder for Common Sense (2022)</li>
+                            <li>Handicap/hjemmehjælper hos privatfamilie (2019-2021)</li>
+                            <li>Kasseassisten Dagli’ Brugsen Sørbymagle (2015-2018)</li>
+                            <li>Julehjælper Flying Tiger (2015)</li>
+                            <li>Kombineret køkken- og salgsmedarbejder i Sørbyhallen (2013-2014)</li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer>
         <div class="footer"><p>Krestine Haugaard MMD eksamen</p></div>
     </footer>
