--- a/tema_2.html
+++ b/tema_2.html
@@ -37,7 +37,75 @@
     </header>
 
     <main>
-        
+
+        <h1>Tema 2</h1>
+        <div class="frame">
+            <div class="indryk">
+                <p>I tema 2 lærte vi om det grundlæggende i webdesign og kode. Her er lidt om de forskellige metoder og programmer vi har lært om og brugt.</p>
+            </div>
+            <div class="grid_1">
+                <div>
+                    <div>
+                        <h2>Design</h2>
+                            <p>I design har vi arbejdet med design konventioner, gestalt principper, farveharmonier og kontrast. Vi har brugt den viden til at få et overordnet overblik over hvad fungere design mæssigt og hvad fungere ikke så godt. En viden vi blandt andet bygger vider på i Tema 3 der omhandler UX design.</p>
+                            <p>Vi har også arbejdet med moodboard, skitsering, wireframes, layoutdiagram, mock-up og styletile samt fonte og tekstopsætning. Vi har blandt andet brugt det til at kick-starte den kreative proces, samt udvikle vores design inden vi begynder at kode. Vi bruger moodboard og mock up/styletile til at skabe en generelt design ide om de farver, fonte samt billeder vi gerne vil benytte på vores website. Nå vi så har vores design ide, bruger vi wireframes og layoutdiagram til at finde ud af hvor det forskellige tekst samt billeder skal ligge i forhold til hinaden. Wireframes er en generel skitse af strukturen på vores website, altså hvordan skal indholdet ligge i forhold til de forskellige sider og hvordan skal det laves responsivt. Layoutdiagram fungere som skitse af skelettet, den er god at bruge når man ikke er så god i kode og har brug for en struktur at arbejde ud fra.</p>   
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Kode</h2>
+                            <p>Vi har lært at kode med HTML og CSS.</p>
+                            <p>På det her Tema var fokus på at arbejde i HTML med semantisk markup, code reuse og opsætning af en hierarkisk mappestruktur samt navigation og navnekonventioner. Det betyder i bund og grund at vi har lært at strukturere vores indhold, lært kodesprog, lave navigation på hjemmesiden mellem de forskellige sider og gjort vores indhold nemt at style i CSS (givet det klasser fx.) </p>
+                            <p>Vi har i CSS arbejdet med responsivt design, css grid, flex, media queries samt indsætning af downloadede fonte. </p>
+                    </div>
+                    <div>    
+                        <h2>Programmer</h2>
+                            <p>Vi har på dette tema arbejdet meget i Visual Studio Code med relevante plug-ins samt FileZilla i forhold til at uploade til vores domæne, HTML- og CSS-validering for at være sikker på at vores kode er skrevet korrekt og fungere som den skal, Firefox/Chrome developer tools, blandt andet brugt til at holde øje med processen mens vi koder og opdage fejl tidligt.</p>
+                            <p>Så har vi også arbejdet med Photoshop til billedbehandling som f.eks.beskæring, størrelse og filformater samt Adobe XD til udvikling af mock-ups og moodboard. Vi har også arbejdet med forskellige filformater som fx. .psd, .xd, png, jpg, gif, svg. webP og vi har arbejdet med at komprimere filer til ZIP filer for nemmere deling. I den forbindelse har vi også snakket om ophavsret og forskellige rettigheds licenser, samt rettigheder angivet som metadata i digitale billeder.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <img src="img/tema_2/min_compter.webp" alt="mit computer set up">
+                <div class="order">
+                    <h2>Om studiestartsprøven</h2>
+                        <p>I studiestartsprøven fik vi udleveret wireframe og layoutdiagram, samt en masse tekst og billeder til de forskellige html filer.</p>
+                        <p>Kravene lød på at websitet skulle bestå af 5 sider der skulle kodes efter udleveret layout diagram og wireframe.</p>
+                        <p>Vi skulle benytte os af farver og to forskellige fonte, samt at alt styling skulle samles i to CSS dokumenter.</p>
+                        <p>De metoder jeg blandt andet brugte til at løse opgaven var semantisk markup, code reuse og opsætning af en hierarkisk mappestruktur samt navigation, navnekonventioner og css grid, flex, media queries. Da meget af indholdet allerede var givet til os, har jeg brugt de forskellige metoder til at skabe overblik, struktur samt skabe et simpelt design med farver og font.</p>
+                        <p>Til venstre kan ses mit eget computer set up, som vi også skulle præcentere i vores opgave.</p>
+                        <p>Det færdige resultat kan ses her.</p>
+                        <a target="_blank" href="../tema_2_grundlæggende_web/websites/website/index.html">Link!</a>
+                </div>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_2">
+                <div>
+                    <h2>Om emnesite</h2>
+                        <p>I opgaven om emnesite, fik vi meget mere ansvar i forhold til selv at finde på indhold, bruge egne billeder og designe vores egen wireframe og layout diagram.</p>
+                            <h3>Tekniske krav:</h3>
+                                <p>Siden skal være responsiv. Navigationsmenuen skal også være responsiv. Der skal bruges webfonte enten via googlefont, css @fontface eller Adobe Typekit. Eget favicon. Html skal validere uden fejl.</p>
+                            <h3>Design krav:</h3> 
+                                <p>Design skal dokumenteres i pdf (skal minimum inkludere wireframes, moodboard(s) samt styletile) En kort beskrivelse af mit koncept. Du skal lave en beskrivelse af designprincipperne, som det er implementeret i dit site.</p>
+                                <p>Vi startede hele processen med at vælge en designstil, sætte os ind i den valgte stil og derefter udarbejde moodboards, wireframes og styletile. Jeg valgte selv at gå med retrostilen i form af et vintage design. Mit styletile kan ses i bunden af siden</p>
+                            <h3>Min process</h3>
+                                <p>Mit koncept gik ud på at genskabe looket fra en vintage avis. Jeg brugte kolonner til at inddele min tekst i mindre sektioner, for at gøre den mere læsbar og give et større overblik over teksten. Så har givet under overskriften (h2) en border, der giver et indtryk af, hvilke overskrifter der tilhører de forskellige kolonner. </p>
+                                <p>Jeg har valgt at bruge illustrationer i stedet for billeder, for at give et bedre indtryk af den gamle avis type, hvor billeder ikke blev brugt, fordi de ikke kunne blive trykt på selve avisen.</p>
+                                <p>Og så brugte jeg mange af de samme metoder fra studiestartsprøven til at opbygge mit endelige website. Jeg designede selv nogle wireframes, men de blev mere inspiration frem for en endelig skitse af det færdige produkt.</p>
+                                <p>Det færdige resultat kan ses her</p>
+                                <a target="_blank" href="../tema_2_grundlæggende_web/websites/emnesite/index.html">Link!</a>
+                </div>
+                <div>
+                    <img src="img/tema_2/styletile.png" alt="styletile">
+                    <img src="img/tema_2/front_page.png" alt="Emnesidens forside">
+                </div>
+            </div>  
+        </div>    
     </main>
 
     <footer>
