--- a/tema_3.html
+++ b/tema_3.html
@@ -36,6 +36,169 @@
 
     </header>
 
+    <main>
+
+        <h1>Tema 3</h1>
+        <div class="frame">
+            <div class="indryk">
+                <p>I dette tema lærte vi grundlæggende om UX/UI og hvordan vi kan bruge research, test og brugerinddragelse til at forbedre vores produkt, i forhold til ting der ikke fungerede så godt som man selv troede eller gode ideer man selv havde overset.</p>
+                <p>Den overordnede case for temaet omhandler en “fiktiv” onlinebutik, der ville sælge t-shirts. Vores opgave blev at benytte de forskellige metoder, samle det til en prototype af en hjemmeside og pitche det for klassen.</p>
+                <p>Her er lidt om de forskellige metoder/programmer, delt op i faser, og hvordan jeg har brugt dem i den endelige opgave.</p>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="indryk">
+                <h2>Konceptfasen</h2>
+                <p>Vi startede hele temaet op med at finde på et koncept til butikken, hvem er vi som brand (afsender), hvem vil vi gerne vil nå ud til (modtager/målgruppe), hvordan vi gerne vil markedsføre brandet og hvad vi gerne ville sælge (selling propositions). </p>
+            </div>
+            <div class="grid_1">    
+                <div>
+                    <h3>Afsender</h3>
+                        <p>Alternativ tøj side der sælger t-shirts med citater og illustrationer. Det er dark humor/ satirisk humor fx. en t-shirt med teksten “I’d rather set myself on fire” sammen en illustration af en person i meditationsstilling i en kæmpe flamme. Det er en lille online butik, som ønsker at flere kommer forbi og køber t-shirts eller at tidligere købere kommer forbi igen for at købe flere t-shirts.</p>
+                </div>
+                <div>
+                    <h3>Målgruppe</h3>
+                        <p>Produkterne kommer nok mest til at henvende sig til folk der er meget på nettet og ser memes (især dark humor memes) så køn og alder spiller ikke rolle her. Hele ideen er at man har meme formatet på print i stedet for på nettet og på den måde kan sprede grin og smil og man kan få lov at sprede lidt ironi, køberen er derfor nok mest en person som ikke har noget imod at folk kommentere på deres valg af t-shirts fordi t-shirten gerne skal skille sig lidt ud i forhold til hvad andre har på.</p>
+                </div>
+                <div>
+                    <h3>Produkter</h3>
+                        <p>Produkterne kommer til at inkludere, t-shirts (mand/kvinde) jumpers (unisex) og hættetrøjer (unisex) med og unden lynlås (dem med lynlås får print på ryggen). Der kommer til at være fokus på kvalitet af stof og print, men det skal stadig holdes på et fornuftigt prisleje. Der kommer til at være mange forskellige størrelser at vælge imellem, men farvevalget kommer til at være begrænset til sort, mørkegrå eller hvid.</p>
+                </div>
+            </div>
+        </div>    
+        <div class="color"></div>
+        <div class="frame">
+            <div class="indryk">
+                <h2>Researchfasen</h2>
+                <p>Vi blev præsenteret for forskellige metoder til at undersøge og få viden, vi senere kan bruge til at definere vores produkt. Som opgave fik vi 3 emner at vælge imellem for hver metode, som vi skulle arbejde ud fra.</p>
+            </div>
+            <div class="grid_2">
+                <div>
+                    <h3>Desk research</h3>
+                        <p>Vi hiver en masse information til os fx. findes der noget lignede et andet sted, er der efterspørgsel på vores produkt, hvad er folk villig til at betale, hvad går de op i at produktet står for (genanvendelighed, fairtrade, diversitet bl.a.) Jo mere, jo bedre og gerne forskellige synspunkter så vi kan få et overblik og konklusion.</p>
+                        <p>Jeg valgte selv A. t-shirt produktion i desk research. Her lagde jeg fokus på at undersøge quality eller quantity, i forhold til hvad der var mest salg i, vil det give mening at lave en dyr t-shirt af høj kvalitet (vil den sælge) eller sælger det bedre hvis prisen ikke er for dyr og dermed gå på kompromis med kvaliteten.</p>
+                        <p>Det jeg gjorde var:</p>
+                        <ul>
+                            <li>Google og skimme alle de artikler der kom frem</li>
+                            <li>Sortere i artiklerne i forhold til information og afsender (kildekritik)</li>
+                            <li>Lave en liste med links og en kort beskrivelse af indhold</li>
+                            <li>Lavet en konklusion ud fra hvad de forskellige links, pdf’er og billeder</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>Indsigter fra desk research</h3>
+                    <img src="img/tema_3/desk_research.png" alt="indsiger fra research">   
+                </div>     
+            </div>
+        </div>    
+        <div class="color_2"></div>
+        <div class="frame">
+            <div class="indryk">
+                <h3>Surveys</h3>
+                    <p>Bruges til at samle et stort datasæt omkring den brede befolknings meninger og holdninger fx. til kvalitet, pris eller design. Jeg fik ikke selv lavet en survey, da vi lavede en samlet i klassen, men da jeg skulle bruge informationerne bagefter kunne jeg ikke finde dem. Men en survey her kunne have været rigtig god til at få et større datasæt omkring hvad folk har lyst til at betale for t-shirts og hvilken forventning der er til kvalitet, samt få en fornemmelse af hvilken stil/type t-shirts der er størst interesse i.</p>
+            </div>
+        </div>    
+        <div class="color_2"></div>
+        <div class="frame">
+            <div class="grid_2">
+                <div>
+                    <h3>Observation</h3>
+                        <p>Bruges til at observere folk benytte lignede produkter, se om man kan få øje på et mønster, mimik eller andet der kan være vigtig i forhold til forstå den brugeroplevelse de har, eller de valg de ubevidst træffer.</p>
+                        <p>Som observation valgte jeg C. online t-shirt shopping. Mit koncept gik ud på kun at være en online shop, derfor synes jeg det var en god ide at observere hvordan brugeren kommer rundt på en online t-shirt website.</p>
+                        <p>Det jeg gjorde var. Jeg satte mit tv op med min kærestes computer så jeg kunne se ham, men også tydeligt se hvad han kiggede på, og skrev noter om hvad jeg observerede. Jeg bed mærke i nogen ting i forhold til min desk research om quality or quantity:</p>
+                        <ul>
+                            <li>Der blev shoppet efter interesse, og ikke hvad der var billigst, men mange af de dyre produkter blev også undgået.</li>
+                            <li>Der blev ikke kigget i information omkring kvaliteten eller i brugeranmeldelser.</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>Indsigter fra observation</h3>
+                    <img src="img/tema_3/observation.png" alt="indsigter fra observation">
+                </div>
+            </div>
+        </div>    
+        <div class="color_2"></div>
+        <div class="frame">        
+            <div class="grid_2">
+                <div>
+                    <h3>Indsigter fra interview</h3>
+                    <img src="img/tema_3/interview.png" alt="indsigter fra interview">
+                </div>
+                <div class="order">
+                    <h3>Interview</h3>
+                        <p>Man kan også vælge at inddrage et efterfølgende interview, hvor man dybdegående kan spørge ind til de ting man gerne vil have viden mere om, fx. hvorfor valgte du den frem for den anden. Jeg valgte B. hensigt, budskab eller motivation (som bruger af t-shirts). Jeg valgte den interviewform, fordi jeg kunne stille spørgsmål som opstod i observationsfasen, samt få en uddybet mening omkring hvad der blev søgt efter.</p>
+                        <p>Jeg startede med at lave en interviewguide med spørgsmål, som jeg kunne bruge i mit interview, og på en anden side skrev jeg noter til svarene (jeg glemte dsv at optage interviewet) bagefter renskrev jeg på computeren.</p>
+                        <p>Jeg fandt ud af at der var interesse for, at bruge ekstra penge på kvalitet af grafiske t-shirts, frem for basic t-shirts. Og at det kan være svært at sammenligne kvaliteten online, når man ikke har viden om stof og kvalitet.</p>
+                </div>
+            </div>
+        </div>    
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_3">
+                <div>
+                    <h2>Designfasen</h2>
+                        <p>Når vi har en masse data efter researchfasen og lavet indsigt drevet beslutningsproces, kan vi gå i gang med design ved at lave sketches, moodboard, styletile. </p>
+                        <p>Her kan man blandt andet gøre brug af forskellige teknikker, til at starte den kreative proces, som lightning demo/ideas (sæt 10 min af og skitser nogle ideer ned). Crazy 8 hvor du folder a4 så det danner 8 rum,og så skitserer du på en ide i 1 minut. går videre til næste rum og skitserer samme ide, men et nyt tiltag i 1 minut. Når alle rum er nådet har man 8 forskellige designs af samme grundide. Solution sketch hvor man laver en mere gennemgribende “pæn” sketch af sin ide, derefter kan man lave heat map med venner og deres solution sketch og blive enige om hvilken ide der er bedst (god hvis man arbejder i gruppe).</p>
+                        <p>Til sidst kan man lave en speed critique af nogle solution sketches, hvor man gennemgår hele designet (hvad er godt, hvad virker knapt så godt, kunne man sammensætte de her to ideer eller andet). Men kan eventuelt sammensætte gode ideer fra speed citique til en 2. iteration af solution sketch (en løsningsprototype).</p>
+                        <p>Her har jeg lavet et lille galleri med mine skitser, prototyper og andet godt.</p>
+                </div>
+                <div class="grid_4">
+                    <div>
+                        <h4>Lightning demo</h4>
+                        <img src="img/tema_3/lightning_demo_ideas.png" alt="Lightning demo">
+                    </div>
+                    <div>
+                        <h4>Crazy 8s</h4>
+                        <img src="img/tema_3/crazy_8.png" alt="Crazy 8s">
+                    </div>
+                    <div>
+                        <h4>Solution sketch</h4>   
+                        <img src="img/tema_3/solution_sketch.png" alt="Solution sketch">
+                    </div>
+                    <div> 
+                        <h4>Muesuem heat map</h4>
+                        <img src="img/tema_3/museum_heat_map.png" alt="Muesuem heat map">
+                    </div>
+                    <div class="span_1">
+                        <h4>Speed critique</h4>
+                        <img  src="img/tema_3/speed_critique_supervote.png" alt="Speed critique">
+                    </div>
+                    <div class="span_2" >
+                        <h4>2. iteration af solution sketch</h4>
+                        <img src="img/tema_3/2.iteration_af_solution_sketch.png" alt="2. iteration af solution sketch">
+                    </div>
+                </div>
+            </div>
+        </div>    
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_2">
+                <div>
+                    <h2>Moodboard</h2>
+                    <img src="img/tema_3/moodboard.png" alt="moodboard for hjemmesiden">
+                </div>
+                <div class="order">
+                    <h2>Prototyping og test</h2>
+                        <p>Når vi har en masse sketches, et moodboard der fanger stemningen af ideen/produktet og et styletile der viser det endelige design, kan vi lave prototype i Adobe XD som kan bruges til test i målgruppen eller til en pitch fremlæggelse.</p>
+                        <p>I XD kan man lave en animeret prototype der fungere på et lavpraktisk plan og som viser blandt andet hvordan hjemmesiden vil komme til at se ud og hvordan den vil fungere (eller et andet produkt, nu arbejde vi bare med tøj design og hjemmesider i dette tema). </p>
+                        <p>Linket her, vil tage dig til en ny fane med min prototype i XD (jeg har dsv ikke en animeret udgave) Men man får stadig en god fornemmelse af hvordan det hele vil ende med at se ud.</p>
+                        <div class="indryk">
+                            <a target="_blank" href="https://xd.adobe.com/view/e51729c1-801e-44d0-ae54-5b59fd6966e7-b044/ ">Link!</a>
+                        </div>
+                    </div>   
+            </div>
+        </div>    
+        <div class="color"></div>
+        <div class="frame">
+                <div class="indryk">
+                    <h2>Pitch</h2>
+                        <p>Når vi har samlet alt vores viden, lavet sketch og design, lavet en prototype af produktet og eventuelt lavet en test af produktet, er det blevet tid til at pitche. </p>
+                        <p>En pitch er en fremlæggelse (for en chef, kunde eller andet) hvor man fremviser de vigtige dele af de forskellige faser, design og prototypen. Det er her man skal sælge sit produkt til videre produktion, og det er derfor det ikke er vigtig om selve konceptet/produktet er færdigt endnu, så længe der er nok materiale til at man kan pitche om hvor god en ide det er. </p>
+                </div>
+        </div>    
+    </main>
+
     <footer>
         <div class="footer"><p>Krestine Haugaard MMD eksamen</p></div>
     </footer>
